# DPGI-Math-Learning-App

./: CMakeLists.txt  HTML Landing Page  README.md  app.js  index.html  styles.css
qml/: Main.qml
src/: main.cpp
