cmake_minimum_required(VERSION 3.16)

project(CalmCanvas LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.5 REQUIRED COMPONENTS Quick)

qt_standard_project_setup()

qt_add_executable(CalmCanvas
    src/main.cpp
)

qt_add_qml_module(CalmCanvas
    URI CalmCanvas
    VERSION 1.0
    QML_FILES
        qml/Main.qml
)

target_link_libraries(CalmCanvas PRIVATE Qt6::Quick)

set_target_properties(CalmCanvas PROPERTIES
    WIN32_EXECUTABLE TRUE
)

qt_finalize_executable(CalmCanvas)
